# pypackage_template

./: .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: changelog.yml  ci.yml  docs.yml  publish.yml
docs/source/: conf.py
scripts/: customize_template.py  install_dev.sh  run_checks.sh
src/pypackage_template/tests/e2e/: __init__.py
src/pypackage_template/tests/unit/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
